[gd_scene load_steps=4 format=3 uid="uid://bgvgt8amaiy37"]

[ext_resource type="Texture2D" uid="uid://chdf07ugoi5j3" path="res://ui_elements/paper.png" id="1_mx3vv"]
[ext_resource type="Script" path="res://scripts/paper_button_version.gd" id="2_h0gp0"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pno0j"]
size = Vector2(19.9792, 20.0772)

[node name="paper_button" type="TextureButton"]
offset_right = 588.0
offset_bottom = 756.0
scale = Vector2(0.2, 0.2)
action_mode = 0
button_mask = 3
texture_normal = ExtResource("1_mx3vv")
script = ExtResource("2_h0gp0")
metadata/_edit_use_anchors_ = true

[node name="paper_area" type="Area2D" parent="."]
scale = Vector2(0.977572, 1.00309)

[node name="paper_collider" type="CollisionShape2D" parent="paper_area"]
position = Vector2(299.191, 373.936)
scale = Vector2(29.9502, 37.2497)
shape = SubResource("RectangleShape2D_pno0j")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="." to="." method="_on_pressed"]
